--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.5"
+    "@astrojs/react": "^4.4.2",
+    "@heroui/react": "^2.8.5",
+    "@heroui/theme": "^2.4.23",
+    "@iconify/iconify": "^3.1.1",
+    "@tailwindcss/vite": "^4.1.17",
+    "astro": "^5.16.5",
+    "framer-motion": "^12.23.26",
+    "gsap": "^3.14.1",
+    "tailwindcss": "^4.1.17"
   }
 }
